<resources>

    <plurals name="hour">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
     <plurals name="episode">
        <item quantity="one">episode</item>
        <item quantity="other">episodes</item>
    </plurals>

    <string name="app_name">traktr</string>
    <string name="loginTrakt">Sign in to Trakt</string>
    <string name="login">Sign in</string>
    <string name="register">Create account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signing_in">Signing in…</string>
    <string name="traktSubtitle">Track what you\'re watching. Discover new shows &amp; movies.</string>
    <string name="login_failed">Sign in failed! Check your username or password.</string>
    <string name="no_internet">No internet connection!</string>
    <string name="enter_valid_username">You need to enter a valid username!</string>
    <string name="enter_valid_password">You need to enter a valid password!</string>
    <string name="email">E-mail</string>
    <string name="confirm_email">Confirm e-mail</string>
    <string name="creating_account_failed">%s is already a registered user name or the e-mail address is already registered!</string>
    <string name="creating_account">Creating account…</string>
    <string name="check_details">Please check the entered details!</string>
    <string name="trending">Trending content</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV shows</string>
    <string name="stringNA">N/A</string>
    <string name="mark_as_watched">Mark as watched</string>
    <string name="mark_as_unwatched">Mark as unwatched</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="remove_from_watchlist">Remove from watchlist</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="remove_from_collection">Remove from collection</string>
    <string name="share">Share</string>
    <string name="open_on_trakt">Open on Trakt</string>
    <string name="error">Something went wrong!</string>
    <string name="marked_movie_as_watched">Marked movie as watched!</string>
    <string name="marked_movie_as_unwatched">Marked movie as unwatched!</string>
    <string name="marked_episode_as_watched">Marked episode as watched!</string>
    <string name="marked_episode_as_unwatched">Marked episode as unwatched!</string>
    <string name="check_in">Check in</string>
    <string name="checked_in">Checked in!</string>
    <string name="added_to_watchlist">Added to watchlist!</string>
    <string name="removed_from_watchlist">Removed from watchlist!</string>
    <string name="added_to_collection">Added to collection!</string>
    <string name="removed_from_collection">Removed from collection!</string>
    <string name="show_has_ended">This show has ended</string>
    <string name="show_airing">%1$s at %2$s on %3$s</string>
    <string name="overview">Overview</string>
    <string name="seasons">Seasons</string>
    <string name="season">Season %d</string>
    <string name="specials">Specials</string>
    <string name="actors">Actors</string>
    <string name="unknown">(unknown)</string>
    <string name="episode">Episode %d</string>
    <string name="no_description">No description.</string>
    <string name="please_wait">Please wait…</string>

</resources>