<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/checkin"
        android:icon="@drawable/ic_action_tick"
        android:showAsAction="ifRoom"
        android:title="@string/check_in">
    </item>
    <item
        android:id="@+id/watched"
        android:icon="@drawable/ic_action_glasses"
        android:showAsAction="ifRoom"
        android:title="@string/mark_as_watched">
    </item>
    <item
        android:id="@+id/watchlist"
        android:icon="@drawable/watchlist_add"
        android:showAsAction="ifRoom"
        android:title="@string/add_to_watchlist">
    </item>
    <item
        android:id="@+id/collection"
        android:icon="@drawable/ic_action_folder_open"
        android:showAsAction="ifRoom"
        android:title="@string/add_to_collection">
    </item>
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="never"
        android:title="@string/share">
    </item>
    <item
        android:id="@+id/open"
        android:icon="@drawable/ic_action_globe"
        android:showAsAction="never"
        android:title="@string/open_on_trakt">
    </item>

</menu>